--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
           <li><a href="about.html">About Us</a></li>
-          <li><a href="calendar.html">Event Calendar</a></li>
+          <li><a href="Calendar.html">Event Calendar</a></li>
           <li><a href="past.html">Past Events</a></li>
         </ul>
       </nav>
