--- a/past.html
+++ b/past.html
@@ -28,7 +28,7 @@
     <div class="past-events-grid">
 
       <article class="past-event-card">
-        <h3>Event Title — Date</h3>
+        <h3>Carnatic Vocal Concert by Vidushi Amritha Murali — 12 October</h3>
         <p class="event-summary">Summary.</p>
         <div class="past-grid">
           <div class="past-img-slot img-placeholder"></div>
