--- a/past.html
+++ b/past.html
@@ -52,22 +52,22 @@
 
     <div class="mySlides">
       <div class="numbertext">1 / 4</div>
-      <img src="1.JPG" style="width:100%" height="250px" width="400px">
+      <img src="1.JPG"  height="250px" width="300px">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">2 / 4</div>
-      <img src="2.JPG" style="width:100%" height="250px" width="400px">
+      <img src="2.JPG"  height="250px" width="300px">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">3 / 4</div>
-      <img src="3.JPG" style="width:100%" height="250px" width="400px">
+      <img src="3.JPG"  height="250px" width="300px">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">4 / 4</div>
-      <img src="4.JPG" style="width:100%" height="250px" width="400px">
+      <img src="4.JPG" height="250px" width="300px">
     </div>
 
     <!-- Next/previous controls -->
@@ -81,19 +81,19 @@
 
     <!-- Thumbnail image controls -->
     <div class="column">
-      <img class="demo" src="1.JPG" onclick="currentSlide(1)" alt="Nature" height="250px" width="400px">
+      <img class="demo" src="1.JPG" onclick="currentSlide(1)" height="250px" width="00px">
     </div>
 
     <div class="column">
-      <img class="demo" src="2.JPG" onclick="currentSlide(2)" alt="Snow" height="250px" width="400px">
+      <img class="demo" src="2.JPG" onclick="currentSlide(2)" height="250px" width="400px">
     </div>
 
     <div class="column">
-      <img class="demo" src="3.JPG" onclick="currentSlide(3)" alt="Mountains" height="250px" width="400px">
+      <img class="demo" src="3.JPG" onclick="currentSlide(3)" height="250px" width="400px">
     </div>
 
     <div class="column">
-      <img class="demo" src="4.JPG" onclick="currentSlide(4)" alt="Lights" height="250px" width="400px">
+      <img class="demo" src="4.JPG" onclick="currentSlide(4)" height="250px" width="400px">
     </div>
   </div>
 </div>
