--- a/past.html
+++ b/past.html
@@ -52,22 +52,22 @@
 
     <div class="mySlides">
       <div class="numbertext">1 / 4</div>
-      <img src="1.JPG"  height="450px" width="400px">
+      <img src="1.JPG">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">2 / 4</div>
-      <img src="2.JPG"  height="450px" width="400px">
+      <img src="2.JPG">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">3 / 4</div>
-      <img src="3.JPG"  height="450px" width="400px">
+      <img src="3.JPG">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">4 / 4</div>
-      <img src="4.JPG" height="450px" width="400px">
+      <img src="4.JPG">
     </div>
 
     <!-- Next/previous controls -->
