--- a/past.html
+++ b/past.html
@@ -52,22 +52,22 @@
 
     <div class="mySlides">
       <div class="numbertext">1 / 4</div>
-      <img src="1.JPG">
+      <img src="1.JPG" style="width:50%; max-height:600px;">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">2 / 4</div>
-      <img src="2.JPG">
+      <img src="2.JPG" style="width:50%; max-height:600px;">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">3 / 4</div>
-      <img src="3.JPG">
+      <img src="3.JPG" style="width:50%; max-height:600px;">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">4 / 4</div>
-      <img src="4.JPG">
+      <img src="4.JPG" style="width:50%; max-height:600px;">
     </div>
 
     <!-- Next/previous controls -->
